# ecc

./: README.md  daily_checks.py  docker-compose.yaml  pyproject.toml
input/: eod.csv  first_intraday_report.csv  margin_types.json
