[tool.poetry]
name = "ecc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.2.1"
#attrs = "22.2.0"
#exceptiongroup = "1.1.0"
#greenlet = "2.0.2"
#importlib-metadata = "6.0.0"
#iniconfig = "2.0.0"
#numpy = "1.21.6"
#packaging = "23.0"
#pandas = "1.3.5"
#pip = "22.0.4"
#pluggy = "1.0.0"
#python-dateutil = "2.8.2"
#pytz = "2022.7.1"
#setuptools = "61.0.0"
#six = "1.16.0"
#SQLAlchemy = "2.0.4"
#tomli = "2.0.1"
#typing_extensions = "4.5.0"
#wheel = "0.37.1"
#zipp = "3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
